# climate-aware-static-file-server

./: Cargo.toml  Makefile  README.md  wasmcloud.toml
.github/workflows/: build.yml  release.yml
src/: lib.rs
