[package]
name = "climate-aware-static-file-server"
version = "0.0.2"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "climate_aware_static_file_server"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"