[package]
name = "climate-aware-static-file-server"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "climate_aware_static_file_server"

[dependencies]
wasmcloud-interface-httpserver = "0.8"
wasmtime = "7.0.0"
wasmcloud-actor-core = "0.2.3"
wasmcloud-actor-http-server = "0.1.2"
wasmtime-wasi = "7.0.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"